using a temporary api key which will be rotated getting the application up and running with test accu weather  API tokens.

--- a/Src/Presentation/BradyWeather.Blazor.Server/appsettings.json
+++ b/Src/Presentation/BradyWeather.Blazor.Server/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "Web:WeatherApi": {
     "BaseAddress": "http://dataservice.accuweather.com",
-    "ApiKey": "<YourKeyGoesHere>"
+    "ApiKey": "GmYSDi0hN2gNs5uy4ve9N7VJg10vApc8"
   }
 }
