--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -28,10 +28,10 @@ env:
   APP_ARTIFACT_LOCATION: "wwwroot" # location of client code build output
   AZURE_STATIC_WEB_APPS_API_TOKEN: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }} # secret containing deployment token for your static web app
 #https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs#argument-reference
-  ARM_CLIENT_ID: ${{ secrets:AZURE_AD_CLIENT_ID }}
-  ARM_CLIENT_SECRET: ${{ secrets:AZURE_AD_CLIENT_SECRET }}
-  ARM_SUBSCRIPTION_ID: ${{ secrets:AZURE_SUBSCRIPTION_ID }}
-  ARM_TENANT_ID: ${{ secrets:AZURE_AD_TENANT_ID }}
+  ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+  ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
+  ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
 
 
 jobs:
