--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -24,7 +24,7 @@ on:
 # Environment variables available to all jobs and steps in this workflow
 env:
   AZURE_WEBAPP_NAME: bradyweatherjml    # set this to the name of your Azure Web App
-  AZURE_WEBAPP_PACKAGE_PATH: './Src/Presentation/BradyWeather.Blazor.Server/'      # set this to the path to your web app project, defaults to the repository root
+  AZURE_WEBAPP_PACKAGE_PATH: './'      # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '3.1.102'                 # set this to the .NET Core version to use
 #https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs#argument-reference
   ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
