adding production appsetting

--- a/Src/Presentation/BradyWeather.Blazor.Server/appsettings.Production.json
+++ b/Src/Presentation/BradyWeather.Blazor.Server/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
-  "AppConfig:Endpoint": "https://ac-bradyweather-dev.azconfig.io",
-  "DetailedErrors": true,
+  "AppConfig:Endpoint": "https://ac-bradyweather-prod.azconfig.io",
+  "DetailedErrors": false,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
