--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -74,10 +74,22 @@ jobs:
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
 
+    - name: Set Credentials
+      id: setcredentials
+      run: |
+         echo ::set-output name=az_credentials::'{ "clientId": "${{ secrets.AZURE_AD_CLIENT_ID  }}", "clientSecret": "${{ secrets.AZURE_AD_CLIENT_SECRET }}" ,  "subscriptionId": "${{ secrets.AZURE_AD_SUBSCRIPTION_ID }}", "tenantId": "${{ secrets.AZURE_AD_TENANT_ID  }}" }'
+
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        credentials: ${{ steps.setcredentials.outputs.az_credentials }}
+
+
     - name: Get Publish Profile
       run: |
         echo "::set-output name=PUBLISH_PROFILE::$(az webapp deployment list-publishing-profiles -g 'brady' -n '${{env.AZURE_WEBAPP_NAME}}' --xml)"
       id: getPublishProfile
+
 
   build:
     runs-on: ubuntu-latest
