--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -59,7 +59,7 @@ jobs:
       uses: azure/login@v1
       with:
         creds: ${{ steps.setcredentials.outputs.az_credentials }}
-        
+
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
@@ -136,6 +136,11 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: .net-app
+          
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ steps.setcredentials.outputs.az_credentials }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
