use the public endpoint

--- a/Src/Presentation/BradyWeather.Blazor.Server/appsettings.Production.json
+++ b/Src/Presentation/BradyWeather.Blazor.Server/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
-  "AppConfig:Endpoint": "https://ac-bradyweather-prod.azconfig.io",
+  "AppConfig:Endpoint": "https://bradyweatherjml.scm.azurewebsites.net",
   "DetailedErrors": false,
   "Logging": {
     "LogLevel": {
