--- a/Src/Presentation/BradyWeather.Blazor.Server/appsettings.json
+++ b/Src/Presentation/BradyWeather.Blazor.Server/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "AppConfig:Endpoint": "https://ac-bradyweather-dev.azconfig.io",
+  "AppConfig:Endpoint": "https://bradyweatherjml.scm.azurewebsites.net",
   "Logging": {
     "LogLevel": {
       "Default": "Trace"
