--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -129,10 +129,6 @@ jobs:
     environment:
       name: 'Development'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    defaults:
-      run:
-        shell: bash
-        working-directory: Src/Presentation/BradyWeather.Blazor.Server
     steps:
     - name: Download artifact from build job
       uses: actions/download-artifact@v3
@@ -160,4 +156,4 @@ jobs:
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ steps.getPublishProfile.outputs.PUBLISH_PROFILE  }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/Src/Presentation/BradyWeather.Blazor.Server
